--- a/printer/catpass/CMakeLists.txt
+++ b/printer/catpass/CMakeLists.txt
@@ -21,7 +21,7 @@ include(AddLLVM)
 
 message(STATUS "LLVM_DIR IS ${LLVM_CMAKE_DIR}.")
 
-include_directories(${LLVM_INCLUDE_DIRS})
+include_directories(${LLVM_INCLUDE_DIRS} ../../analysis/include)
 
 
 # Declare the LLVM pass to compile
