Improved the DSWP test makefile

--- a/tests/DSWP_0/Makefile
+++ b/tests/DSWP_0/Makefile
@@ -1,5 +1,12 @@
 PASSES=-load ~/CAT/lib/PDGAnalysis.so -load ~/CAT/lib/DSWP.so
-ANALYSES=-basicaa -scalar-evolution -loops -loop-simplify -lcssa -domtree
+AA6=-cfl-anders-aa
+AA5=-scev-aa
+AA4=-tbaa
+AA3=-cfl-steens-aa
+AA2=-globals-aa
+AA1=-basicaa
+AA=$(AA1) $(AA2) $(AA3) $(AA4) $(AA5) $(AA6)
+ANALYSES=$(AA) -scalar-evolution -loops -loop-simplify -lcssa -domtree
 
 all: test
 
@@ -15,5 +22,13 @@ test.bc: test.c
 	opt -mem2reg $@ -o $@
 	llvm-dis $@
 
+show_passes: test.bc
+	opt $(PASSES) $(ANALYSES) -DSWP $^ --debug-pass=Structure -disable-output
+
+show_time: test.bc
+	opt $(PASSES) $(ANALYSES) -DSWP $^ -time-passes -disable-output
+
 clean:
 	rm -f *.bc *.dot *.jpg *.ll *.S *.s *.o test
+
+.PHONY: show_passes show_time
