--- a/dswp/CMakeLists.txt
+++ b/dswp/CMakeLists.txt
@@ -14,6 +14,10 @@ add_definitions(
 -D__STDC_CONSTANT_MACROS
 )
 
+SET(CUSTOM_COMPILE_FLAGS "-fexceptions")
+SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${CUSTOM_COMPILE_FLAGS}" )
+SET( CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} ${CUSTOM_COMPILE_FLAGS}" )
+
 include_directories(${LLVM_INCLUDE_DIRS})
 link_directories(${LLVM_LIBRARY_DIRS})
 message(STATUS "Found LLVM ${LLVM_PACKAGE_VERSION}")
