--- a/tests/scripts/Makefile
+++ b/tests/scripts/Makefile
@@ -1,3 +1,4 @@
+CC=clang++
 PASSES=-load ~/CAT/lib/PDGAnalysis.so -load ~/CAT/lib/DSWP.so
 AA6=-cfl-anders-aa
 AA5=-scev-aa
@@ -7,20 +8,31 @@ AA2=-globals-aa
 AA1=-basicaa
 AA=$(AA1) $(AA2) $(AA3) $(AA4) $(AA5) $(AA6)
 ANALYSES=$(AA) -scalar-evolution -loops -loop-simplify -lcssa -domtree
+THREADER=threadpooler
+LIBS=-lm
+INCLUDES=-I../include/threadpool/include
+OPTIMIZED=parallelized
 
-all: test
+all: $(OPTIMIZED) baseline
 
-test: test_dswp.bc
-	clang -O0 $^ -o $@
+baseline: test.cpp
+	$(CC) -std=c++14 -O3 $^ -o $@
+
+$(THREADER).bc: $(THREADER).cpp
+	$(CC) $(INCLUDES) -std=c++14 -emit-llvm -O3 -c $^ -o $@
+
+$(OPTIMIZED): test_dswp.bc
+	$(CC) -std=c++14 -pthreads -O0 $^ $(LIBS) -o $@
 
 test_dswp.bc: test.bc
 	opt $(PASSES) $(ANALYSES) -DSWP $^ -o $@
 	llvm-dis $@
 
-test.bc: test.c
-	clang -emit-llvm -O0 -Xclang -disable-O0-optnone -c $^ -o $@
+test.bc: test.cpp $(THREADER).bc
+	$(CC) $(INCLUDES) -std=c++14 -emit-llvm -O0 -Xclang -disable-O0-optnone -c $< -o $@
 	opt -mem2reg $@ -o $@
 	llvm-dis $@
+	llvm-link $@ $(THREADER).bc -o $@
 
 show_passes: test.bc
 	opt $(PASSES) $(ANALYSES) -DSWP $^ --debug-pass=Structure -disable-output
@@ -29,6 +41,6 @@ show_time: test.bc
 	opt $(PASSES) $(ANALYSES) -DSWP $^ -time-passes -disable-output
 
 clean:
-	rm -f *.bc *.dot *.jpg *.ll *.S *.s *.o test
+	rm -f *.bc *.dot *.jpg *.ll *.S *.s *.o *.txt baseline $(OPTIMIZED)
 
 .PHONY: show_passes show_time
