--- a/tests/scripts/Makefile
+++ b/tests/scripts/Makefile
@@ -8,7 +8,7 @@ AA2=-globals-aa
 AA1=-basicaa
 AA=$(AA1) $(AA2) $(AA3) $(AA4) $(AA5) $(AA6)
 ANALYSES=$(AA) -scalar-evolution -loops -loop-simplify -lcssa -domtree
-THREADER=threadpooler
+THREADER=DSWP_utils
 LIBS=-lm
 INCLUDES=-I../include/threadpool/include
 OPTIMIZED=parallelized
