Fetch threadpool from git

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,5 +1,8 @@
-all:
+all: download
 	./scripts/test.sh
 
+download:
+	mkdir -p include ; cd include ; ../scripts/download.sh "/project/marc/repositories/threadpool"
+
 clean:
-	./scripts/clean.sh
+	./scripts/clean.sh ; rm -rf include/
