Generalize the makefile for tests

--- a/tests/scripts/Makefile
+++ b/tests/scripts/Makefile
@@ -1,5 +1,5 @@
+PARALLELIZATION=DSWP
 CC=clang++
-PASSES=-load ~/CAT/lib/PDGAnalysis.so -load ~/CAT/lib/DSWP.so
 AA6=-cfl-anders-aa
 AA5=-scev-aa
 AA4=-tbaa
@@ -13,6 +13,8 @@ LIBS=-lm
 INCLUDES=-I../include/threadpool/include
 OPTIMIZED=parallelized
 
+PASSES=-load ~/CAT/lib/PDGAnalysis.so -load ~/CAT/lib/$(PARALLELIZATION).so
+
 all: $(OPTIMIZED) baseline
 
 baseline: test.cpp
@@ -25,7 +27,7 @@ $(OPTIMIZED): test_dswp.bc
 	$(CC) -std=c++14 -pthreads -O0 $^ $(LIBS) -o $@
 
 test_dswp.bc: test.bc
-	opt $(PASSES) $(ANALYSES) -DSWP $^ -o $@
+	opt $(PASSES) $(ANALYSES) -$(PARALLELIZATION) $^ -o $@
 	llvm-dis $@
 
 test.bc: test.cpp $(THREADER).bc
@@ -35,10 +37,10 @@ test.bc: test.cpp $(THREADER).bc
 	llvm-link $@ $(THREADER).bc -o $@
 
 show_passes: test.bc
-	opt $(PASSES) $(ANALYSES) -DSWP $^ --debug-pass=Structure -disable-output
+	opt $(PASSES) $(ANALYSES) -$(PARALLELIZATION) $^ --debug-pass=Structure -disable-output
 
 show_time: test.bc
-	opt $(PASSES) $(ANALYSES) -DSWP $^ -time-passes -disable-output
+	opt $(PASSES) $(ANALYSES) -$(PARALLELIZATION) $^ -time-passes -disable-output
 
 clean:
 	rm -f *.bc *.dot *.jpg *.ll *.S *.s *.o *.txt baseline $(OPTIMIZED)
