Added the common parallelization framework

--- a/passes/Makefile
+++ b/passes/Makefile
@@ -1,6 +1,9 @@
-all: printer analysis dswp
+all: printer analysis dswp parallelization
 
 printer:
+	cd $@ ; ./run_me.sh
+
+parallelization:
 	cd $@ ; ./run_me.sh
 
 analysis:
@@ -15,4 +18,4 @@ uninstall:
 clean:
 	rm -rf */build ;
 
-.PHONY: clean analysis printer dswp download
+.PHONY: clean analysis printer dswp download parallelization
