Moved the shared run_me.sh under scripts

--- a/passes/Makefile
+++ b/passes/Makefile
@@ -1,16 +1,16 @@
 all: printer analysis dswp parallelization
 
 printer:
-	cd $@ ; ./run_me.sh
+	cd $@ ; ../scripts/run_me.sh
 
 parallelization:
-	cd $@ ; ./run_me.sh
+	cd $@ ; ../scripts/run_me.sh
 
 analysis:
-	cd $@ ; ./run_me.sh
+	cd $@ ; ../scripts/run_me.sh
 
 dswp:
-	cd $@ ; ./run_me.sh
+	cd $@ ; ../scripts/run_me.sh
 
 uninstall:
 	rm -rf ~/CAT ;
