--- a/passes/parallelization/CMakeLists.txt
+++ b/passes/parallelization/CMakeLists.txt
@@ -27,4 +27,4 @@ include(AddLLVM)
 add_subdirectory(src)
 
 # Install
-install(PROGRAMS DESTINATION)
+install(PROGRAMS include/LoopDependenceInfo.hpp include/Parallelization.hpp DESTINATION include)
