--- a/passes/dswp/src/CMakeLists.txt
+++ b/passes/dswp/src/CMakeLists.txt
@@ -10,6 +10,8 @@ set(Srcs
   Environment.cpp
   InductionVariable.cpp
   Helper.cpp
+  ControlDependence.cpp
+  ParallelSCC.cpp
   DSWP.cpp
   DSWPPass.cpp
   DSWPLoopDependenceInfo.cpp
