Improved the compilation of LLVM passes to allow autocompletion

--- a/passes/dswp/CMakeLists.txt
+++ b/passes/dswp/CMakeLists.txt
@@ -17,6 +17,7 @@ add_definitions(
 SET(CUSTOM_COMPILE_FLAGS "-fexceptions")
 SET( CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${CUSTOM_COMPILE_FLAGS}" )
 SET( CMAKE_EXE_LINKER_FLAGS  "${CMAKE_EXE_LINKER_FLAGS} ${CUSTOM_COMPILE_FLAGS}" )
+set( CMAKE_EXPORT_COMPILE_COMMANDS ON )
 
 include_directories(${LLVM_INCLUDE_DIRS})
 link_directories(${LLVM_LIBRARY_DIRS})
