Extracted (some of) the heuristics from DSWP to a new pass called "heuristics"

--- a/passes/Makefile
+++ b/passes/Makefile
@@ -1,4 +1,4 @@
-all: printer analysis dswp parallelization
+all: printer analysis dswp parallelization heuristics
 
 printer:
 	cd $@ ; ../scripts/run_me.sh
@@ -7,6 +7,9 @@ parallelization:
 	cd $@ ; ../scripts/run_me.sh
 
 analysis:
+	cd $@ ; ../scripts/run_me.sh
+
+heuristics:
 	cd $@ ; ../scripts/run_me.sh
 
 dswp:
@@ -18,4 +21,4 @@ uninstall:
 clean:
 	rm -rf */build */*.json ; find ./ -name .ycm_extra_conf.py -delete
 
-.PHONY: clean analysis printer dswp download parallelization
+.PHONY: clean analysis printer dswp download parallelization heuristics
