--- a/tests/scripts/Makefile
+++ b/tests/scripts/Makefile
@@ -9,7 +9,7 @@ AA3=-cfl-steens-aa
 AA2=-globals-aa
 AA1=-basicaa
 AA=$(AA1) $(AA2) $(AA3) $(AA4) $(AA5) $(AA6)
-ANALYSES=$(AA) -scalar-evolution -loops -loop-simplify -lcssa -domtree -parallelization
+ANALYSES=$(AA) -scalar-evolution -loops -loop-simplify -lcssa -domtree -parallelization -heuristics
 THREADER=$(PARALLELIZATION)_utils
 LIBS=-lm
 INCLUDES=-I../include/threadpool/include
@@ -20,7 +20,7 @@ RUNTIME_CFLAGS="-DDSWP_STATS"
 RUNTIME_CFLAGS=""
 
 PRINTPASSES=-load ~/CAT/lib/PDGAnalysis.so -load ~/CAT/lib/$(PDGPRINTER).so
-OPTPASSES=-load ~/CAT/lib/PDGAnalysis.so -load ~/CAT/lib/Parallelization.so -load ~/CAT/lib/$(PARALLELIZATION).so
+OPTPASSES=-load ~/CAT/lib/PDGAnalysis.so -load ~/CAT/lib/Parallelization.so -load ~/CAT/lib/Heuristics.so -load ~/CAT/lib/$(PARALLELIZATION).so
 
 all: baseline $(OPTIMIZED)
 
