Renamed dswp to parallelizer. Added scripts to add/remove symbolic links automatically

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -2,7 +2,8 @@ all: download
 	./scripts/test.sh
 
 download:
-	mkdir -p include ; cd include ; ../scripts/download.sh "/project/marc/repositories/threadpool"
+	mkdir -p include ; cd include ; ../scripts/download.sh "/project/marc/repositories/threadpool" ;
+	./scripts/add_symbolic_link.sh ;
 
 clean:
 	./scripts/clean.sh ; rm -rf include/
