--- a/passes/parallelizer/CMakeLists.txt
+++ b/passes/parallelizer/CMakeLists.txt
@@ -1,6 +1,6 @@
 # Project
 cmake_minimum_required(VERSION 3.4.3)
-project(CAT)
+project(Parallelizer)
 
 # Programming languages to use
 enable_language(C CXX)
