--- a/passes/parallelizer/src/CMakeLists.txt
+++ b/passes/parallelizer/src/CMakeLists.txt
@@ -23,7 +23,7 @@ set(Srcs
 set_source_files_properties(${Srcs} PROPERTIES COMPILE_FLAGS " -std=c++14 -fPIC")
 
 # Name of the LLVM pass
-set(PassName "DSWP")
+set(PassName "Parallelizer")
 
 # configure LLVM 
 find_package(LLVM REQUIRED CONFIG)
