Moved DOALL to its own pass

--- a/passes/Makefile
+++ b/passes/Makefile
@@ -1,4 +1,4 @@
-all: printer analysis parallelization_utilities parallelizer heuristics dswp
+all: printer analysis parallelization_utilities parallelizer heuristics dswp doall
 
 printer:
 	cd $@ ; ../scripts/run_me.sh
@@ -18,10 +18,13 @@ parallelizer:
 dswp:
 	cd $@ ; ../scripts/run_me.sh
 
+doall:
+	cd $@ ; ../scripts/run_me.sh
+
 uninstall:
 	rm -rf ~/CAT ;
 
 clean:
 	rm -rf */build */*.json ; find ./ -name .ycm_extra_conf.py -delete
 
-.PHONY: clean analysis printer parallelizer download parallelization_utilities heuristics dswp
+.PHONY: clean analysis printer parallelizer download parallelization_utilities heuristics dswp doall
