--- a/passes/Makefile
+++ b/passes/Makefile
@@ -1,4 +1,4 @@
-all: printer analysis parallelization_utilities parallelizer heuristics parallelization_technique dswp doall
+all: printer analysis parallelization_utilities dgsimplify parallelizer heuristics parallelization_technique dswp doall
 
 printer:
 	cd $@ ; ../scripts/run_me.sh
@@ -7,6 +7,9 @@ parallelization_utilities:
 	cd $@ ; ../scripts/run_me.sh
 
 analysis:
+	cd $@ ; ../scripts/run_me.sh
+
+dgsimplify:
 	cd $@ ; ../scripts/run_me.sh
 
 heuristics:
@@ -30,4 +33,4 @@ uninstall:
 clean:
 	rm -rf */build */*.json ; find ./ -name .ycm_extra_conf.py -delete
 
-.PHONY: clean analysis printer parallelizer download parallelization_utilities heuristics parallelization_technique dswp doall
+.PHONY: clean analysis printer dgsimplify parallelizer download parallelization_utilities heuristics parallelization_technique dswp doall
