Refactor/Major: heuristics, sccdag attrs: invocation cost analysis separated into heuristic subclass

--- a/passes/heuristics/src/CMakeLists.txt
+++ b/passes/heuristics/src/CMakeLists.txt
@@ -1,7 +1,11 @@
 # Sources
 set(Srcs 
-  HeuristicsPass.cpp
+  InvocationLatency.cpp
+  PartitionCostAnalysis.cpp
+  MinMaxSizePartitionAnalysis.cpp
+  SmallestSizePartitionAnalysis.cpp
   Heuristics.cpp
+  HeuristicsPass.cpp
 )
 
 # Compilation flags
