--- a/passes/Makefile
+++ b/passes/Makefile
@@ -1,4 +1,4 @@
-all: printer analysis parallelization_utilities dgsimplify parallelizer heuristics parallelization_technique dswp doall
+all: printer analysis parallelization_utilities dgsimplify parallelizer heuristics parallelization_technique dswp doall helix
 
 printer:
 	cd $@ ; ../scripts/run_me.sh
@@ -27,10 +27,13 @@ dswp:
 doall:
 	cd $@ ; ../scripts/run_me.sh
 
+helix:
+	cd $@ ; ../scripts/run_me.sh
+
 uninstall:
 	rm -rf ~/CAT ;
 
 clean:
 	rm -rf */build */*.json ; find ./ -name .ycm_extra_conf.py -delete
 
-.PHONY: clean analysis printer dgsimplify parallelizer download parallelization_utilities heuristics parallelization_technique dswp doall
+.PHONY: clean analysis printer dgsimplify parallelizer download parallelization_utilities heuristics parallelization_technique dswp doall helix
